ingress-in-namespace/namespace/egress/svc-egress-test-namespace.yaml
apiVersion: v1
kind: Service
metadata:
  name: egress-test-namespace
  namespace: test-namespace
spec:
  selector:
    app: istio-egress
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 9001
