ingress-in-namespace/namespace/egress/svc-ingress-test-namespace.yaml
apiVersion: v1
kind: Service
metadata:
  name: namespace-test-namespace
  namespace: test-namespace
spec:
  selector:
    app: istio
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8001
