ingress-in-namespace/namespace/egress/gateway-ingress-test-namespace.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egress-test-namespace
  namespace: test-namespace
spec:
  selector:
    istio: istio-egress
  servers:
  - port:
      number: 9001
      name: http
      protocol: HTTP
    hosts:
    - "*"
