ingress-in-namespace/namespace/egress/se-test-namespace.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: egress-test-namespace
spec:
  hosts:
  - www.ya.ru
  ports:
  - number: 80
    name: http-ya
    protocol: http
  location: MESH_INTERNAL
  resolution: DNS
