ingress-in-namespace/namespace/egress/vs-egress-test-namespace.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: namespace-test-namespace
  namespace: test-namespace
spec:
  hosts:
  - "*"
  gateways:
  - egress-test-namespace
  http:
    - route:
        - destination:
            host: yandex.call
            port:
              number: 80
